--- a/mystyle.css
+++ b/mystyle.css
@@ -11,16 +11,15 @@
   }
 }
 #account_rendering {
-  position: relative;
+  /* position: relative; */
   background: black;
   color: #ccc;
   margin: 35px auto;
   font-size: 60px;
-  width: 450px;
+  width: 50%;
   border-radius: 15px 0px;
   animation-name: shadow;
   animation-duration: 1s;
-
   animation-iteration-count: infinite;
 }
 .error {
@@ -54,7 +53,7 @@
   letter-spacing: 1px;
 }
 #update:hover {
-  background: rgba(255, 0, 0, 0.8);
-  box-shadow: 1px 1px 1px 1px black;
-  color: #fff;
+  background: #FFF7D6;
+  box-shadow: none;
+  /* color: #fff; */
 }
